2008-09-02  lav

	* calc.cc: add sum function.
	* inline.h, kern.cc, edit.h, textpoin.cc, textpoin.h: outline some
	  functions as suggested by gcc.
	* color.cc, colormnu.cc, edit.cc, file.cc, format.cc, highli.cc,
	  highli.h, keymap.cc, loadsave.cc, mb.h, options.cc, screen.cc,
	  search.cc, signals.cc, window.cc: fixed warnings; used gnulib;
	  dropped rx.h support.
	* regex.c, regex.h, wcwidth.c, wcwidth1.c: moved here to save
	  from gnulib-tool.

2008-08-11  lav

	* keymapdf.cc: add kri/kind terminfo keys to keymap.

2008-05-08  Raphael Geissert <atomo64@gmail.com>

	* getch.cc: Fix build problem related to KEY_F macro definition (closes: #223168).

2008-03-08  lav

	* edit.cc: fixed has_widechar for unsigned wchar_t.

2008-01-21  lav

	* block.cc: use MessageSync instead of Message+SyncTextWin (fixes
	  block prompt)

2008-01-10  lav

	* options.cc: allow tab size up to 99.
	* kern.cc: nicer PrevLine.
	* about.cc: update copyright.
	* menu1.cc: fix off-by-one.

2007-09-06  lav

	* calc.cc: recognize .123 as a number.
	* about.cc: update copyright year.

2007-08-08  lav

	* search.cc: do not match empty string.

2007-08-02  lav

	* highli.cc: match basename.

2006-11-29  lav

	* user.cc: do autoindent only when there is no input pending (no paste).
	* screen.cc: better aggregate paste operations; do StatusLine in SyncTextWin;
	  show rotating stick when pasting.
	* edit.cc, format.cc, frames.cc, options.cc, search.cc: separate StatusLine
	  call is not needed anymore.
	* highli.cc: fixed syntax signature recognition.

2006-06-20  lav

	* textpoin.cc: use NextLine for faster search.
	* kern.cc: optimize NextLine with memchr.

2006-06-14  lav

	* keymapdf.cc: add putty codes.
	* user.cc: support comment-line for java and sql.

2006-05-15  lav

	* history.cc, history.h: add clone ctor - this fixes a coredump
	  in History::Push.

2006-04-24  lav

	* history.cc: null-terminate read history lines.

2006-04-21  lav
